# STEP_MOTOR_DRIVER

./: LICENSE  README.md  main.h
MOTOR_IDF_V2.0/: CMakeLists.txt  sdkconfig  sdkconfig.old
MOTOR_IDF_V2.0/driver/init/: motor_init.c  motor_init.h
MOTOR_IDF_V2.0/driver/sensor/: sensor_func.c  sensor_func.h
MOTOR_IDF_V2.0/main/: CMakeLists.txt  main.c
